# drink

./: .gitignore  Cargo.toml
drink/: Cargo.toml
drink-cli/src/app_state/: contracts.rs  print.rs
drink-cli/src/executor/: contract.rs  mod.rs
drink-cli/src/ui/: layout.rs
drink/src/: lib.rs  session.rs
drink/src/pallet_revive_debugging/: intercepting.rs  tracing.rs
drink/src/session/: bundle.rs  mock.rs  mocking_api.rs  record.rs  transcoding.rs
drink/src/session/mock/: extension.rs
drink/test-macro/src/: contract_building.rs
examples/chain-extension/: Cargo.toml
examples/chain-extension/src/: chain_extension_ink_side.rs  chain_extension_runtime_side.rs  lib.rs
examples/contract-events/: Cargo.toml  lib.rs
examples/cross-contract-call-tracing/: Cargo.toml  lib.rs
examples/dry-running/: Cargo.toml  lib.rs
examples/flipper/: Cargo.toml  lib.rs
examples/mocking/: Cargo.toml  lib.rs
examples/multiple-contracts/: Cargo.toml  lib.rs
examples/quick-start-with-drink/: Cargo.toml  lib.rs
examples/runtime-interaction/: lib.rs
