[workspace]
resolver = "2"

members = ["drink", "drink/test-macro", "drink-cli"]

exclude = ["examples/"]

[workspace.package]
authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/drink"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.18.0"

[workspace.dependencies]
anyhow = { version = "1.0.71" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { git = "https://github.com/chungquantin/cargo-contract.git", branch = "peter/feat-revive" }
contract-metadata = { git = "https://github.com/chungquantin/cargo-contract.git", branch = "peter/feat-revive" }
contract-transcode = { git = "https://github.com/chungquantin/cargo-contract.git", branch = "peter/feat-revive" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec = { version = "3.6.9" }
parity-scale-codec-derive = { version = "3.6.9" }
paste = { version = "1.0.7" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale-info = { version = "2.10.0" }
serde_json = { version = "1.0" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }
ink_sandbox = { git = "https://github.com/use-ink/ink", branch = "cmichi-remove-wasm-default-to-revive" }
ink_primitives = { git = "https://github.com/use-ink/ink", branch = "cmichi-remove-wasm-default-to-revive" }

# Substrate dependencies

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "645878a27115db52e5d63115699b4bbb89034067" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "645878a27115db52e5d63115699b4bbb89034067" }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "645878a27115db52e5d63115699b4bbb89034067" }

# Local dependencies

drink = { version = "=0.18.0", path = "drink" }
drink-test-macro = { version = "=0.18.0", path = "drink/test-macro" }
