[package]
name = "chain-extension"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "cmichi-remove-wasm-default-to-revive", features = [
    "unstable",
], default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
drink = { path = "../../drink" }

# If you are creating a custom runtime with `drink::create_sandbox!` macro, unfortunately you need to
# include these dependencies manually. Versions should match the ones in `Cargo.toml` of the `drink` crate.
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "645878a27115db52e5d63115699b4bbb89034067" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "645878a27115db52e5d63115699b4bbb89034067" }

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
