[package]
name = "multiple-contracts"
authors = ["Cardinal", "Aleph Zero Foundation"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.1.0"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "cmichi-remove-wasm-default-to-revive", features = [
    "ink-debug",
    "unstable",
], default-features = false }
psp22 = { git = "https://github.com/Cardinal-Cryptography/PSP22.git", branch = "ink5", default-features = false, features = [
    "contract",
    "ink-as-dependency",
] }

[dev-dependencies]
drink = { path = "../../drink" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "psp22/std"]
ink-as-dependency = []
